--- a/www/scss/_contact.scss
+++ b/www/scss/_contact.scss
@@ -55,4 +55,8 @@ section#contact {
     display: none;
     color: white;
   }
+
+  .grecaptcha-badge {
+    float: left;
+  }
 }
