--- a/www/scss/_portfolio.scss
+++ b/www/scss/_portfolio.scss
@@ -3,6 +3,11 @@
   .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    padding-top: 10px;
+    .portfolio-item-inner {
+      border: 1px solid grey;
+      padding: 5px;
+    }
     .portfolio-link {
       position: relative;
       display: block;
